# R-Type

./: .clang-format  .cz.json  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  SUMMARY.md  build.sh  conanfile.txt  ecs.md  improvements.md  install-and-build-guide.md  main.cpp  outputCoverage.sh  protocol.txt  setup.sh  systems-flowchart.md  test
.github/workflows/: build_linux.yml  build_macos.yml  build_windows.yml  cmake.yml  cmake_build.yml  exec_tests.yml  linter.yml  main.yml  sync.yml
Documentation/: Client.md  ECS.md  Level.md
client/: CMakeLists.txt  build.sh  conanfile.txt
client/src/: Client.cpp  Client.hpp  main.cpp
dev-documentation/: README.md  client-documentation.md  comunication-protocol.md  ecs-documentaion.md  ecs-documentation.md  ecs.md  epitech-r-type-r-type.md  team-coding-conventions.md
server/: CMakeLists.txt  build.sh
server/src/: Communication.cpp  Communication.hpp  ConnectionManager.hpp  Server.cpp  Server.hpp  main.cpp
shared/: MessageQueue.cpp  MessageQueue.hpp
src/: WindowsGuard.hpp
src/client/: Client.cpp  Client.hpp  SpriteManager.cpp  SpriteManager.hpp  main.cpp  spriteManager.hpp
src/client/ClientGame/: ClientGame.cpp  ClientGame.hpp  factories.cpp  factories.hpp
src/client/GUI/: TextBox.cpp  TextBox.hpp
src/client/GUI/Components/: Button.cpp  Button.hpp  TextBox.cpp  TextBox.hpp
src/client/GUI/Menus/: Connection.cpp  Connection.hpp  ConnectionMenu.cpp  ConnectionMenu.hpp  LobbyMenu.cpp  LobbyMenu.hpp  LobbySelectionMenu.cpp  LobbySelectionMenu.hpp  Menu.cpp  Menu.hpp
src/client/Protocols/: ClientGameProtocol.cpp  ClientGameProtocol.hpp  ClientLobbyProtocol.cpp  ClientLobbyProtocol.hpp  TcpClient.cpp  TcpClient.hpp
src/client/Systems/: HealthSystem.cpp  HealthSystem.hpp  MusicSystem.cpp  MusicSystem.hpp  PlayerMovementSystem.cpp  PlayerMovementSystem.hpp  SpriteSystem.cpp  SpriteSystem.hpp  Systems.hpp
src/client/systems/: ArmamentSystem.cpp  ArmamentSystem.hpp  HealthSystem.cpp  HealthSystem.hpp  PlayerMovementSystem.cpp  PlayerMovementSystem.hpp  SpriteSystem.cpp  SpriteSystem.hpp  Systems.hpp
src/createLevelFile/: Level.cpp  Level.hpp  main.cpp
src/server/: Communication.cpp  Communication.hpp  ConnectionManager.hpp  Game.cpp  Game.hpp  Server.cpp  Server.hpp  main.cpp
src/server/Protocols/: Connections.cpp  Connections.hpp  GameProtocol.cpp  GameProtocol.hpp  LobbyProtocol.cpp  LobbyProtocol.hpp  TcpServer.cpp  TcpServer.hpp
src/server/Systems/: ArmamentSystem.cpp  ArmamentSystem.hpp  Factory.cpp  Factory.hpp  Systems.hpp  VelocitySystem.cpp  VelocitySystem.hpp
src/server/levels/: level1  level2  level3  level4  level5  level6  level7  level8
src/server/pablosLevel/: Level.cpp  Level.hpp
src/shared/ECS/: CompPool.cpp  CompPool.hpp  Component.hpp  Components.cpp  Components.hpp  ECS.hpp  ECSManager.cpp  ECSManager.hpp  Entity.cpp  Entity.hpp  Manager.cpp  Manager.hpp  Serialization.cpp  Serialization.hpp
src/shared/ECS/Components/: Armor.hpp  CollisionEffect.hpp  Components.hpp  Health.hpp  Position.hpp
src/shared/MessageQueue/: MessageQueue.cpp  MessageQueue.hpp
src/shared/Networking/: AsioConstants.hpp  ProtocolShared.hpp  ProtocolUtils.hpp  TcpCommunication.cpp  TcpCommunication.hpp  UdpCommunication.cpp  UdpCommunication.hpp
src/shared/Systems/: HitboxSystem.cpp  HitboxSystem.hpp  ISystem.hpp  JanitorSystem.cpp  JanitorSystem.hpp  Systems.hpp  VelocitySystem.cpp  VelocitySystem.hpp
src/shared/Utilities/: Timer.cpp  Timer.hpp  UUID.cpp  UUID.hpp  Utilities.cpp  Utilities.hpp  WindowsGuard.hpp  ray.hpp  secureAsio.hpp
src/shared/systems/: HitboxSystem.cpp  HitboxSystem.hpp  ISystem.hpp  JanitorSystem.cpp  JanitorSystem.hpp  Systems.hpp  UUID.cpp  UUID.hpp  VelocitySystem.cpp  VelocitySystem.hpp  serialization.hpp
test/: main.cpp
test/ECS/: EcsFixture.cpp  EcsFixture.hpp  EcsTests.cpp  NewEntity.cpp  Serialization.cpp
tutorials/: README.md  new-graphics.md
tutorials/new-entities/: README.md  new-background.md  new-boss.md  new-enemies.md
user-documentation/: README.md  install-and-build-guide.md  license.md  system-overview.md  systems-overview.md  test.md
user-documentation/tutorials/: README.md  new-levels.md
user-documentation/tutorials/new-entities/: README.md  new-background.md  new-boss.md  new-enemies.md
